# Simple3DEngine

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Doxyfile.in  LICENSE  Makefile  README.md  bsd-3-clause.txt  build.sh  common.cmake  main.cpp  meson.build  meson_options.txt  notes  test-engine
Shader/: texture.frag  texture.vert
Shader-130/: texture.frag  texture.vert
data/: config
data/models/: maison-test.mtl
data/texture/512x512/: README-LEMOG-FR
demo/: CMakeLists.txt
demo/src/: main.cpp  main.h
demo/src/utils/: FileManager.cpp  FileManager.h  Interpolate.h  Interpolate.hpp  Loader.cpp  Loader.h  MemoryManager.h
doc-gen/: main.h  mainpage.md
engine/: .depend  Engine-main.cpp  Engine-main.h  Makefile  Mesh.cpp  Mesh.h  MiscObject.cpp  MiscObject.h  Object.cpp  Object.h  Object.hpp  SceneGraph.cpp  SceneGraph.h
include/GraphicEngine/: Camera.h  Engine-main.h  FrameBuffer.h  Graphics.h  Light.h  Mesh.h  RcManager.h  SceneGraph.h  Shader.h  Window.h
include/S3DE/: Camera.h  DebugGL.h  Engine-main.h  FrameBuffer.h  Graphics.h  Input.h  Light.h  Mesh.h  RcManager.h  RessourceManager.hpp  S3DE_BasicMeshManager.h  S3DE_CEntity.h  S3DE_Camera.h  S3DE_CubemapTexture.h  S3DE_DebugGL.h  S3DE_Engine-main.h  S3DE_FrameBuffer.h  S3DE_GBuffer.h  S3DE_Graphics.h  S3DE_IResourceManager.hpp  S3DE_Input.h  S3DE_Interpolate.hpp  S3DE_InterpolateFactory.hpp  S3DE_InterpolateImpl.hpp  S3DE_InterpolateImplLinear.hpp  S3DE_Light.h  S3DE_Loader.h  S3DE_Mesh.h  S3DE_MeshException.h  S3DE_MeshManager.h  S3DE_Parser.h  S3DE_SDL_Tools.h  S3DE_SceneGraph.h  S3DE_Shader.h  S3DE_ShadowMap.h  S3DE_SkyboxShader.h  S3DE_Texture.h  S3DE_Window.h  SceneGraph.h  Shader.h  (+2 more)
src/: CMakeLists.txt  main.cpp  main.h  meson.build
src/engine/: BasicMeshManager.cpp  CEntity.cpp  CEntity.h  Camera-internals.hpp  Camera.cpp  Camera.h  Engine-main-internals.hpp  Engine-main.cpp  Engine-main.h  FrameBuffer.cpp  FrameBuffer.h  GBuffer.cpp  GBuffer.h  Light.cpp  Light.h  Makefile  Mesh.cpp  Mesh.h  MeshAssimpImpl.cpp  MeshAssimpImpl.h  MeshException.cpp  MeshImpl.h  MeshImplFactory.cpp  MeshImplFactory.h  MeshManager.cpp  MeshManager.h  MiscObject.cpp  MiscObject.h  Object.hpp  SceneGraph.cpp  SceneGraph.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  SkyboxShader.cpp  SkyboxShader.h  Vertex.h  meson.build
src/input/sdl2/: Input.cpp  meson.build
src/light/: Light.cpp
src/misc/: Camera.cpp  Input.cpp  Input.h  meson.build
src/sdl2_utils/: meson.build
src/tests/: meson.build
src/tests/Engine/: Engine_test.cpp  Engine_test.h  main.cpp  meson.build
src/tests/Parser/: Parser_test.cpp  Parser_test.h  main.cpp  meson.build
src/texture/: meson.build
src/texture/sdl2/: CubemapTexture.cpp  Texture.h  meson.build
src/tools/: BasicMeshManager.cpp  BasicMeshManager.h  CubemapTexture.cpp  DebugGL.cpp  Interpolate.hpp  Loader.cpp  Loader.h  MeshException.cpp  MeshManager.cpp  Parser.cpp  Parser.h  RcManager.cpp  RcManager.h  Shader.cpp  Texture.cpp  Texture.h  meson.build
src/window/: Graphics.cpp  Graphics.h  Makefile  Window.cpp  Window.h  WindowHandle.cpp  WindowHandle.h  WindowManager.h  meson.build
src/window/sdl2/: SDL2GLWindow.cpp  SDL2GLWindow.h  meson.build
subprojects/: gtest.wrap
tests/: test-link.cmake
tests/Parser/: CMakeLists.txt  meson.build  test_main.cpp  test_parser.cpp  test_parser.h
tools/: .depend  Makefile  Shader.cpp  Shader.h  Texture.cpp  Texture.h  cppcheck.sh  dependency.sh
tools/ci/: clang.sh  clang39.sh  clang50.sh  dependency.sh  doxygen.sh  gcc.sh  gcc6.sh  gcc61.sh  simpleTest.sh  test.sh
uml/: class_diagram.xmi  window.uxf
window/: .depend  Graphics.cpp  Graphics.h  Window.cpp
