include_engine = files([
  'Camera.h',
  'Camera-internals.hpp',
  'CEntity.h',
  'Engine-main.h',
  'Engine-main-internals.hpp',
  'FrameBuffer.h',
  'GBuffer.h',
  'IResourceManager.hpp',
  'Light.h',
  'Mesh.h',
  'MeshException.h',
  'MeshManager.h',
  'SceneGraph.h',
  'Shader.h',
  'ShadowMap.h',
  'SkyboxShader.h'
  ])

source_engine  = files([
  'CEntity.cpp',
  'FrameBuffer.cpp',
  'GBuffer.cpp',
  'Light.cpp',
  'Mesh.cpp',
  'MeshException.cpp',
  'MeshManager.cpp',
  'SceneGraph.cpp',
  'Shader.cpp',
  'ShadowMap.cpp',
  'SkyboxShader.cpp'
])
