include_tools = files([
  'BasicMeshManager.h',
  'CubemapTexture.h',
  'DebugGL.h',
  'Interpolate.hpp',
  'Loader.h',
  'Parser.h',
  'SDL_Tools.h',
  'Texture.h'
])
source_tools = files([
  'BasicMeshManager.cpp',
  'CubemapTexture.cpp',
  'DebugGL.cpp',
  'Loader.cpp',
  'Parser.cpp',
  'Texture.cpp'
])
