include_window = files([
  'WindowHandle.h',
  'WindowManager.h'
])

include_window_sdl2 = files([
'sdl2/SDL2GLWindow.h'
])

source_window = files([
  'WindowHandle.cpp'
])

source_window_sdl2 = files([
 'sdl2/SDL2GLWindow.cpp'
])

install_headers(include_window, subdir: 'S3DE/window')
install_headers(include_window_sdl2, subdir: 'S3DE/window/sdl2')
